Adicionado as classes controller, exception e os validates

--- a/Saneamento_Basico_R/src/main/java/com/mycompany/saneamento_basico_r/model/view/CadastroCliente.form
+++ b/Saneamento_Basico_R/src/main/java/com/mycompany/saneamento_basico_r/model/view/CadastroCliente.form
@@ -157,10 +157,12 @@
                   <Component id="fClienteBairro" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnClienteRegistrar" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblClienteTelefone" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                  <Component id="fClienteTelefone" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblClienteTelefone" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                      <Component id="fClienteTelefone" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace pref="102" max="32767" attributes="0"/>
           </Group>
